Fixed the gospel sound

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <div class="col xs-3 effect-button basic-sounds">
-                        <div class="bg-green" data-sound="cubansax">
+                        <div class="bg-green" data-sound="gospel">
                             <div class="sound-label basic-label text-center">GOSPEL</div>                            
                         </div>
                     </div>
