Not a full knob anymore

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
                 <div class="row" style="margin-bottom: 18px;">
                     <div class="col xs-3 text-center effect-knob basic-knob">
                         <p><h6 class="text-white no-margin">VOLUME</h6></p>
-                        <input id="volume-knob" type="text" value="100" class="dial" data-width="95%" data-skin="tron" data-cursor=true data-thickness=.3 data-fgColor="#222222">
+                        <input id="volume-knob" type="text" value="100" class="dial" data-angleArc=270 data-angleOffset=-135 data-width="95%" data-skin="tron" data-cursor=true data-thickness=.3 data-fgColor="#222222">
                     </div>
                     <div class="col xs-3 text-center effect-knob basic-knob">
                         <p><h6 class="text-white no-margin">REVERB</h6></p>
-                        <input id="reverb-knob" type="text" value="0" class="dial" data-width="95%" data-skin="tron" data-cursor=true data-thickness=.3 data-fgColor="#222222">
+                        <input id="reverb-knob" type="text" value="0" class="dial" data-angleArc=270 data-angleOffset=-135 data-width="95%" data-skin="tron" data-cursor=true data-thickness=.3 data-fgColor="#222222">
                     </div>
                     <div class="col xs-3 text-center effect-knob basic-knob">
                         <p><h6 class="text-white no-margin">DELAY</h6></p>
-                        <input id="delay-knob" type="text" value="0" class="dial" data-width="95%" data-skin="tron" data-cursor=true data-thickness=.3 data-fgColor="#222222">
+                        <input id="delay-knob" type="text" value="0" class="dial" data-angleArc=270 data-angleOffset=-135 data-width="95%" data-skin="tron" data-cursor=true data-thickness=.3 data-fgColor="#222222">
                     </div>
                     <div class="col xs-3 text-center effect-knob advanced-knob">
                         <p><h6 class="text-white no-margin">MODULATE</h6></p>
-                        <input id="modulator-knob" type="text" value="0" class="dial" data-width="95%" data-skin="tron" data-cursor=true data-thickness=.3 data-fgColor="#222222">
+                        <input id="modulator-knob" type="text" value="0" class="dial" data-angleArc=270 data-angleOffset=-135 data-width="95%" data-skin="tron" data-cursor=true data-thickness=.3 data-fgColor="#222222">
                     </div>
                 </div>  
                 <div class="row">
