--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-        <title></title>
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-title" content="Pineappleton V1">
+        <title>Pineappleton V1</title>
         <link rel="stylesheet" href="boba.min.css">
         <link rel="stylesheet" href="main.css">
         <script
